style and correctly enlarge quote, trouble align-text: flex end for the quoter

--- a/style.css
+++ b/style.css
@@ -138,9 +138,44 @@ a {
     border-radius: 16px;
 }
 
+/*end character descriptions*/
+/*Nick eh 30 quote*/
+
 .nick-eh-30-quote {
-    background-color: lightgray;
+    display: flex;
+    flex: auto;
+    justify-content: center;
+    background-color: #e5e7eb;
+    padding: 100px 0;
 }
+.quote-containter {
+    display: flex;
+    flex-direction: column;
+    max-width: 900px;
+}
+
+.quote {
+    font-size: 36px;
+    font-weight: 100;
+    width: 900px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    flex-wrap: wrap;
+}
+
+span {
+    font-size: 30px;
+}
+
+.quoter {
+    font-size: 30px;
+    font-weight: 900;
+    align-items: flex-end;   
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+
+
+
 
 .download {
     background-color: rgb(76, 107, 192);
